# hackwave

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: MEMORY_INTEGRATION.md  REFACTORING_SUMMARY.md  SETUP.md  SUPERVISOR_ARCHITECTURE.md  langgraph.json  pyproject.toml  requirements.txt
backend/examples/: cli_research.py
backend/src/agent/: __init__.py  app.py  configuration.py  graph.py  memory.py  prompts.py  state.py  tools_and_schemas.py  utils.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ActivityTimeline.tsx  ChatMessagesView.tsx  InputForm.tsx  WelcomeScreen.tsx
